Fix transition on mobile menu
I think this got reversed in a merge somewhere. Should transform the transition.

--- a/careers/base/static/css/base.css
+++ b/careers/base/static/css/base.css
@@ -233,7 +233,6 @@ figure {
         background: url(/static/img/bg-gradient-sand.png) repeat-x 0 0,
                     url(/static/img/bg-sand.png) repeat 0 0, #f5f1e8;
         -webkit-transition: -webkit-transform 0.8s;
-           -moz-transition: -moz-transform 0.8s;
                 transition: transform 0.8s;
     }
         .js-enabled .tray-open .masthead {
@@ -243,7 +242,6 @@ figure {
         .mod-csstransitions.mod-csstransforms .tray-open .masthead {
             left: 0;
             -webkit-transform: translate(200px);
-            -ms-transform: translate(200px);
             transform: translate(200px);
         }
 
@@ -382,9 +380,8 @@ figure {
     left: 0;
     width:100%;
     overflow:hidden;
-    -webkit-transition: left 1s;
-       -moz-transition: left 1s;
-            transition: left 1s;
+    -webkit-transition: -webkit-transform 0.8s;
+            transition: transform 0.8s;
 }
     .tray-open #wrapper {
         left: 200px;
@@ -393,8 +390,7 @@ figure {
     .mod-csstransitions.mod-csstransforms .tray-open #wrapper {
         left: 0;
         -webkit-transform: translateX(200px);
-        -ms-transform: translateX(200px);
-        transform: translateX(200px);
+                transform: translateX(200px);
     }
 
 #tray-toggle {
@@ -439,7 +435,6 @@ figure {
     box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
     background-color: #4d4e53;
     -webkit-transition: -webkit-transform 0.8s;
-       -moz-transition: -moz-transform 0.8s;
             transition: transform 0.8s;
 }
 
@@ -449,7 +444,6 @@ figure {
     .mod-csstransitions.mod-csstransforms .tray-open #nav-tray {
             left: -200px;
             -webkit-transform: translateX(200px);
-            -ms-transform: translateX(200px);
             transform: translateX(200px);
         }
 
